# forge-timeline

./: .gitignore  README.md  pyproject.toml
docs/: spec.md
examples/: canvas_full.py  navigator_minimal.py  video_demo.py
src/forge_timeline/: __init__.py  baton.py  baton_sync.py  minimap.py  theme.py  time_format.py  time_label.py  timeline.py  video_panel.py
src/forge_timeline/staves/: __init__.py  measure.py  movement.py  note.py  thumbnail.py  waveform.py
tests/: test_baton_sync.py  test_smoke.py  test_time_label.py  test_timeline.py  test_video_panel.py
